Prevent text from overflowing
Example text: "demnde d'où"

--- a/public/styles/forum.css
+++ b/public/styles/forum.css
@@ -75,6 +75,7 @@
 
 .topic {
   display: table-row;
+  overflow: hidden;
 }
 
 .topic__new-messages-indicator {
